# Mantis

./: .codedocs  .gitignore  LICENSE  LU_data.mat  LU_data_v2.mat  MAPS.mat  MainRun.m  Mantis.fig  Mantis.m  MantisServer.opt  MantisTestServer.m  PreProcess.m  PrepareMAPSinput.m  README.md  TestGUI.fig  TestGUI.m
CPP/MantisServer/: MantisServer.sln  mantisConfig.ini
CPP/MantisServer/MantisServer/: BMaps.h  BRaster.h  CMakeLists.txt  MShelper.h  MSoptions.h  MantisMain.h  MantisServer.cpp  MantisServer.vcxproj  MantisServer.vcxproj.filters  Nload.h  Rch.h  Region.h  Scenario.h  URFs.h  doxygen.config  mainpage.md  mantisserver.dox  resource.h  runtimeWells.h  vcpkg.json  wells.h
CPP/TestClient/: TestClient.sln
CPP/TestClient/TestClient/: CMakeLists.txt  TestClient.cpp  TestClient.vcxproj  TestClient.vcxproj.filters  vcpkg.json
Local/: Readme.md  SWAT_LULC.csv  getData.sh
MantisSA/: CMakeLists.txt  MS_HRU_raster.h  MS_input.h  MS_loading.h  MS_mpi_utils.h  MS_raster.h  MS_structures.h  MS_tests.h  MS_unsat.h  MS_urf_calc.h  MS_well_cell.h  MSdebug.h  NPSAT_data.h  README.md  SWAT_data.h  main.cpp  vcpkg.json
RmantisAPI/: Examples.R
URFSprep/: CVHM_HRU_GIS_CODES_UNIQUE.mat  GNLMLoadData.m  ProccessFittedData.m  SWATLoadData.m  Untitled2.m
docs/: README.md  RunningMantisExample.ipynb  TLR_example.ipynb  _config.yml  about.html  index.html
gis_data/: B118_C2Vproj.dbf  B118_C2Vproj.sbn  B118_C2Vproj.sbx  B118_C2Vproj.shp  B118_C2Vproj.shp.xml  B118_C2Vproj.shx  B118_CV.dbf  B118_CV.sbn  B118_CV.sbx  B118_CV.shp  B118_CV.shp.xml  B118_CV.shx  B118_CV_TAproj.dbf  B118_CV_TAproj.shp  B118_simple.dbf  B118_simple.shp  B118_simple.shx  Basins_simple.dbf  Basins_simple.shp  Basins_simple.shx  C2Vsim_Subregions_3310.dbf  C2Vsim_Subregions_3310.shx  CVHM_Basins_TAproj.dbf  CVHM_Basins_TAproj.shp  CVHM_Basins_TAproj.shx  CVHM_FarmsTA.dbf  CVHM_FarmsTA.shp  CVHM_FarmsTA.shx  CVHM_Townships_3310.dbf  CVHM_Townships_3310.shp  CVHM_Townships_3310.shx  CVHM_Townships_3310_simplified.dbf  CVHM_Townships_3310_simplified.shp  CVHM_Townships_3310_simplified.shx  CVHM_outline_3310.dbf  CVHM_outline_3310.shp  CVHM_outline_3310.shx  CV_outline_simple.dbf  CV_outline_simple.shp  CV_outline_simple.shx  (+9 more)
gis_data/BackgroundMaps/: CV_Active_Raster.tif.aux.xml  Mantis_bMaps.qgz
gis_data/BackgroundMaps/B118/: B118_CV_4326.geojson  B118_CV_TAproj.shx
gis_data/BackgroundMaps/Basins/: Basins_3310.tif.aux.xml  C2VsimBasins_3310.dbf  C2VsimBasins_3310.shp  C2VsimBasins_3310.shx  C2VsimBasins_4326.geojson
gis_data/BackgroundMaps/CentralValley/: C2VSimFG_outline_3310.dbf  C2VSimFG_outline_3310.shp  C2VSimFG_outline_3310.shx  C2VSimFG_outline_4326.geojson
gis_data/BackgroundMaps/Counties/: Counties_CVonly_4326.geojson  counties_simple_CVclip.dbf  counties_simple_CVclip.shp  counties_simple_CVclip.shx
gis_data/BackgroundMaps/Subregions/: C2Vsim_Subregions_3310.shp  C2Vsim_Subregions_4326.geojson
gis_data/BackgroundMaps/Townships/: CVHM_Townships_3310_simplified.dbf  CVHM_Townships_4326_simplified.geojson
pyCode/: MainScript.py
